x1126 Paraffin processing makes blocks
If the labware doesn't already contain blocks, they will be turned
into blocks by paraffin processing.
Labware supplied to this operation must be suitable for being a block:
it must contain one sample, in the first slot, without a section number.